--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>My App Website</title>
 </head>
 <body>
-    <h1>Welcome to My App!</h1>
-    <p>This is the main page of my site.</p>
+    <h1>Squawk interactive!</h1>
+    <p>Ice Block Breaker.</p>
+    <p>squawkinteractive@gmail.com</p>
 </body>
 </html>
