privacy policy (1).html

--- a/privacy policy (1).html
+++ b/privacy policy (1).html
@@ -17,7 +17,7 @@
     <p>This Privacy Policy explains how we collect, use, and share information when you use our Service. By using the Service, you agree to the collection and use of information in accordance with this policy.</p>
 
     <h2>Information We Collect</h2>
-    <p>We do not collect personally identifiable information such as your name or email. However, Ice Block Breaker uses advertising partners (like Google AdMob) that may automatically collect certain data to serve and optimize ads.</p>
+    <p>Ice Block Breaker uses advertising partners (like Google AdMob) that may automatically collect certain data to serve and optimize ads.</p>
     <ul>
         <li>IP address</li>
         <li>Device type and model</li>
@@ -26,10 +26,10 @@
         <li>General location (approximate, based on IP)</li>
         <li>Usage data such as interactions with ads</li>
     </ul>
-    <p>This data is collected by the third-party SDKs integrated in the app, not by us directly.</p>
+    <p>This data is collected by the third party SDKs integrated in the app.</p>
 
     <h2>Cookies & Tracking</h2>
-    <p>Third-party services like Google AdMob may use cookies or similar technologies (e.g., SDKs) to personalize ads. You can opt out of personalized ads via your device settings.</p>
+    <p>Third party services like Google AdMob may use cookies or similar technologies to personalize ads. You can opt out of personalized ads via your device settings.</p>
 
     <h2>Children’s Privacy</h2>
     <p>Our game is rated E for Everyone, but it is not directed to children under 13. We do not knowingly collect personal data from children under 13. If we learn we have unknowingly collected such data, we will take steps to delete it.</p>
@@ -43,15 +43,15 @@
         <li>Ensure technical functionality</li>
     </ul>
 
-    <h2>Third-Party Services</h2>
-    <p>The app may share limited data with the following third-party services:</p>
+    <h2>Third Party Services</h2>
+    <p>The app may share limited data with the following third party services:</p>
     <ul>
-        <li>Google AdMob – for showing in-game ads<br>
+        <li>Google AdMob – for showing in game ads<br>
             <a href="https://support.google.com/admob/answer/6128543">AdMob Privacy Policy</a></li>
     </ul>
 
     <h2>Data Retention</h2>
-    <p>We do not store any personal data ourselves. However, third-party services integrated into the app (such as Google AdMob) may collect and retain user data for their own purposes, such as advertising and analytics.<br>
+    <p>We do not store any personal data ourselves. However, third party services integrated into the app (such as Google AdMob) may collect and retain user data for their own purposes, such as advertising and analytics.<br>
     The duration for which such data is retained is determined by each provider’s privacy policy.</p>
     <p>For details, please refer to:</p>
     <ul>
@@ -60,7 +60,7 @@
     </ul>
 
     <h2>Data Access & Deletion Requests</h2>
-    <p>Squawk Interactive does not store any personal data. However, third-party services we use may process data on our behalf. If you wish to access, correct, or delete data collected by these services, you may do so through:</p>
+    <p>Squawk Interactive does not store any personal data. However, third party services we use may process data on our behalf. If you wish to access, correct, or delete data collected by these services, you may do so through:</p>
     <ul>
         <li><a href="https://myadcenter.google.com/controls">Google Ad Settings</a></li>
         <li><a href="https://support.google.com/admob/answer/7665968">AdMob Data Requests</a></li>
@@ -68,10 +68,10 @@
     <p>Alternatively, you may contact us at <a href="mailto:squawkinteractive@gmail.com">squawkinteractive@gmail.com</a> and we will assist you in directing the request to the appropriate party.</p>
 
     <h2>Security</h2>
-    <p>We and our third-party partners take reasonable steps to protect your data, but no method of electronic transmission or storage is 100% secure.</p>
+    <p>We and our third party partners take reasonable steps to protect your data, but no method of electronic transmission or storage is 100% secure.</p>
 
     <h2>Changes to This Policy</h2>
-    <p>We may update this policy from time to time. Updates will be posted here with a revised effective date.</p>
+    <p>We may update this policy from time to time. Updates will be posted here with a revised effective date and Version Number.</p>
 
     <h2>Contact Us</h2>
     <p>If you have any questions or concerns about this policy, please contact:</p>
